started work on periodiclly checking status

--- a/app/app.global.less
+++ b/app/app.global.less
@@ -7,3 +7,15 @@
 
 @import './less/_dark.less';
 @import './less/_variables.less';
+
+.container {
+    margin: 1rem 2rem;
+}
+
+.form {
+    margin: 0rem 2rem;
+}
+
+.log {
+    margin-top: 1rem;
+}
